# TKSGSOT

./: .gitignore  LICENSE  README.md  pyproject.toml
ComOD-dataset/fgw_dist_matrice/: fgw_area_ids.npy
analysis/: aggregate_macro_results.py  aggregate_micro_results.py  plot_all_summaries_plt.py  plot_all_summaries_sns.py  plot_geo_cases.py
figs/: 17097_map.eps  32003_map.eps
jobs/: bash_dgm_array.sh  bash_rf_array.sh  bash_svr_array.sh  slurm_classic_array.sh  slurm_dgm_array.sh
src/experiments/: fgw.py  run_selective_dgm.py  run_selective_rf.py  run_selective_svr.py
src/models/: gravity.py
src/utils/: dataset.py  split_areas.py
